# factorial_challenge

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/core/domain/: category.py  pricing_context.py  product.py  product_repository.py  product_service.py  product_type.py
backend/core/domain/customizable_product/: customizable_product.py  customizable_product_configuration.py  product_option.py  product_option_value.py
backend/core/domain/product_compatibility/: product_compatibility_service.py  product_incompatibility.py
backend/core/domain/service_product/: null_price_rule.py  price_rule.py  service_product.py
backend/core/domain/stockable_product/: stockable_product.py  stockable_product_repository.py
backend/core/infrastructure/persistence/: product_model.py  sqlalchemy_product_repository.py
backend/docs/: domain_model.puml
backend/migrations/: env.py
backend/migrations/versions/: a87b20916056_initial_tables.py
backend/shared/domain/: aggregate_root.py  entity.py
backend/shared/domain/cqrs/: command_bus.py  command_handler.py
backend/shared/domain/value_objects/: custom_uuid.py  validation_result.py  value_object.py
backend/shared/infrastructure/: config.py  dependencies.py
backend/shared/infrastructure/api/: main.py
backend/shared/infrastructure/cqrs/: memory_command_bus.py
backend/shared/infrastructure/persistence/: database.py  (+1 more)
docs/domain_model/: customizable_product_detail.puml  domain_model.puml  pricing_detail.puml  product_incompatibilities_detail.puml  product_inheritance_detail.puml
(+22 files in other folders)
